# serializer version: 1
# name: test_r4_asmaddr2_bf16_srvw_golden
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_UserArgs_MT128x128x16qg0L3L2VoaeTAy7UIPg45EtaShBx6rwzA0yOKw7dMQY=',
      'err': 0,
    }),
  ])
# ---
# name: test_r4_asmaddr2_fp32_golden
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT64x256x16_MI16x16xC4pxKrOehGVEI0u-P35yFsrtHM5V6SGOjy-xdquno3c=',
      'err': 0,
    }),
  ])
# ---
